--- a/app/src/main/res/layout/login_screen.xml
+++ b/app/src/main/res/layout/login_screen.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="148dp"
+        android:onClick="onGoogleSignIn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.51"
@@ -47,13 +48,13 @@
         app:layout_constraintTop_toBottomOf="@+id/registerButton" />
 
     <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/textInputEditText"
+        android:id="@+id/emailLogin"
         android:layout_width="260dp"
         android:layout_height="40dp"
         android:layout_marginBottom="12dp"
         android:hint="Email"
         android:inputType="textEmailAddress"
-        app:layout_constraintBottom_toTopOf="@+id/editText"
+        app:layout_constraintBottom_toTopOf="@+id/passwordLogin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent" />
@@ -91,7 +92,7 @@
         app:layout_constraintStart_toEndOf="@+id/view3" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/passwordLogin"
         android:layout_width="260dp"
         android:layout_height="40dp"
         android:layout_marginBottom="28dp"
@@ -149,7 +150,7 @@
         android:text="Register"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintTop_toBottomOf="@+id/passwordLogin" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
