--- a/app/src/main/res/layout/pie_data_layout.xml
+++ b/app/src/main/res/layout/pie_data_layout.xml
@@ -42,7 +42,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.81" />
 
-        <com.github.mikephil.charting.charts.LineChartChart
+        <com.github.mikephil.charting.charts.BarChart
             android:id="@+id/linechart"
             android:layout_width="413dp"
             android:layout_height="394dp"
@@ -54,7 +54,6 @@
             app:layout_constraintVertical_bias="0.81" />
 
     </LinearLayout>
-
 
 </ScrollView>
 
