--- a/app/src/main/res/layout/layout_items.xml
+++ b/app/src/main/res/layout/layout_items.xml
@@ -111,6 +111,15 @@
                 app:layout_constraintHorizontal_bias="0.848"
                 app:layout_constraintStart_toEndOf="@+id/category"
                 app:layout_constraintTop_toTopOf="@+id/guideline" />
+
+            <TextView
+                android:id="@+id/transcation_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="32dp"
+                android:layout_marginBottom="20dp"
+                app:layout_constraintBottom_toTopOf="@+id/guideline"
+                app:layout_constraintEnd_toEndOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
