--- a/app/src/main/res/layout/main_transaction_layout.xml
+++ b/app/src/main/res/layout/main_transaction_layout.xml
@@ -30,11 +30,10 @@
                 app:srcCompat="@drawable/ic_more_vert_black_24dp" />
 
             <TextView
-                android:id="@+id/textView10"
+                android:id="@+id/totalAmount_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="28dp"
-                android:text="800 lei"
                 android:textColor="@color/colorAccent"
                 android:textSize="20sp"
                 android:textStyle="bold"
