--- a/app/src/main/res/layout/add_transaction_layout.xml
+++ b/app/src/main/res/layout/add_transaction_layout.xml
@@ -9,10 +9,9 @@
 
     <Button
         android:id="@+id/transaction_add_button"
-        android:layout_width="203dp"
-        android:layout_height="65dp"
-        android:layout_marginTop="610dp"
-        android:layout_marginBottom="56dp"
+        android:layout_width="157dp"
+        android:layout_height="70dp"
+        android:layout_marginBottom="96dp"
         android:elevation="0dp"
         android:onClick="addTransactionButtonClick"
         android:text="@string/add_transaction"
@@ -20,86 +19,18 @@
         app:cornerRadius="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="414dp"
-        android:layout_height="72dp"
-        android:layout_marginBottom="659dp"
-        android:background="#ffffff"
-        android:elevation="3dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageView
-            android:id="@+id/pop_up_image"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_marginStart="339dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="50dp"
-            android:layout_marginBottom="23dp"
-            android:contentDescription="@string/popup"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_more_vert_black_24dp" />
-
-        <TextView
-            android:id="@+id/addTransactionTitle"
-            android:layout_width="152dp"
-            android:layout_height="29dp"
-            android:layout_marginStart="42dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="220dp"
-            android:layout_marginBottom="19dp"
-            android:text="@string/add_transaction"
-            android:textColor="@color/colorAccent"
-            android:textSize="19sp"
-            android:textStyle="italic"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="414dp"
         android:layout_height="471dp"
-        android:layout_marginTop="111dp"
-        android:layout_marginBottom="149dp"
+        android:layout_marginBottom="212dp"
         android:background="#ffffff"
         android:elevation="3dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/transaction_select_category"
-            android:layout_width="321dp"
-            android:layout_height="35dp"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="84dp"
-            android:layout_marginEnd="35dp"
-            android:layout_marginBottom="324dp"
-            android:elevation="1dp"
-            android:hint="@string/select_category"
-            android:onClick="onSelectCategory"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent">
 
         <EditText
             android:id="@+id/transaction_price"
@@ -114,10 +45,10 @@
             android:inputType="numberDecimal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_bias="0.571"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.857" />
 
         <EditText
             android:id="@+id/transaction_notes"
@@ -138,6 +69,22 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            android:id="@+id/transaction_select_category"
+            android:layout_width="249dp"
+            android:layout_height="41dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="35dp"
+            android:layout_marginBottom="332dp"
+            android:elevation="1dp"
+            android:hint="@string/select_category"
+            android:onClick="onSelectCategory"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.72"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
             android:id="@+id/transaction_date"
             android:layout_width="321dp"
             android:layout_height="34dp"
@@ -150,10 +97,9 @@
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.107" />
+            app:layout_constraintVertical_bias="0.714" />
 
         <TextView
             android:id="@+id/title"
@@ -188,6 +134,17 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/add_category_photo"
+            android:layout_width="58dp"
+            android:layout_height="51dp"
+            android:layout_marginTop="84dp"
+            app:layout_constraintEnd_toStartOf="@+id/transaction_select_category"
+            app:layout_constraintHorizontal_bias="0.85"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/accessories" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
