--- a/app/src/main/res/layout/edit_transaction_layout.xml
+++ b/app/src/main/res/layout/edit_transaction_layout.xml
@@ -18,4 +18,167 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.515" />
+
+    <Button
+        android:id="@+id/transaction_update_button"
+        android:layout_width="172dp"
+        android:layout_height="68dp"
+        android:layout_marginBottom="140dp"
+        android:elevation="0dp"
+        android:onClick="onSaveButton"
+        android:text="SAVE"
+        android:textAllCaps="false"
+        app:cornerRadius="25dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/transaction_add_button2"
+        android:layout_width="172dp"
+        android:layout_height="66dp"
+        android:layout_marginBottom="48dp"
+        android:backgroundTint="#FF0808"
+        android:elevation="0dp"
+        android:onClick="onDeleteButton"
+        android:text="DELETE"
+        android:textAllCaps="false"
+        app:cornerRadius="25dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
+        android:layout_width="414dp"
+        android:layout_height="471dp"
+        android:layout_marginBottom="244dp"
+        android:background="#ffffff"
+        android:elevation="3dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.666"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <EditText
+            android:id="@+id/transaction_price"
+            android:layout_width="325dp"
+            android:layout_height="55dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="194dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginBottom="194dp"
+            android:autofillHints="price"
+            android:hint="@string/enter_price"
+            android:inputType="numberDecimal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.571"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.857" />
+
+        <EditText
+            android:id="@+id/transaction_notes"
+            android:layout_width="321dp"
+            android:layout_height="55dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="345dp"
+            android:layout_marginEnd="35dp"
+            android:layout_marginBottom="50dp"
+            android:gravity="start|top"
+            android:hint="@string/write_note"
+            android:importantForAutofill="no"
+            android:inputType="text"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/category_image"
+            android:layout_width="58dp"
+            android:layout_height="51dp"
+            android:layout_marginTop="80dp"
+            app:layout_constraintEnd_toStartOf="@+id/transaction_select_category"
+            app:layout_constraintHorizontal_bias="0.879"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/account" />
+
+        <TextView
+            android:id="@+id/transaction_date"
+            android:layout_width="321dp"
+            android:layout_height="34dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="143dp"
+            android:layout_marginEnd="35dp"
+            android:layout_marginBottom="266dp"
+            android:autofillHints="Select Date"
+            android:hint="@string/select_date"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.535" />
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="248dp"
+            android:layout_height="35dp"
+            android:layout_marginStart="74dp"
+            android:layout_marginEnd="74dp"
+            android:layout_marginBottom="410dp"
+            android:elevation="2dp"
+            android:text="@string/transaction_details"
+            android:textColor="#4c4c4c"
+            android:textSize="28sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/title2"
+            android:layout_width="125dp"
+            android:layout_height="26dp"
+            android:layout_marginStart="118dp"
+            android:layout_marginTop="308dp"
+            android:layout_marginEnd="118dp"
+            android:layout_marginBottom="108dp"
+            android:elevation="2dp"
+            android:text="@string/additional_data"
+            android:textColor="#4c4c4c"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/transaction_select_category"
+            android:layout_width="249dp"
+            android:layout_height="41dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="84dp"
+            android:layout_marginEnd="35dp"
+            android:layout_marginBottom="324dp"
+            android:elevation="1dp"
+            android:hint="@string/select_category"
+            android:onClick="onSelectCategory"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.72"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.272" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
