--- a/app/src/main/res/layout/expandable_recyclerview_element.xml
+++ b/app/src/main/res/layout/expandable_recyclerview_element.xml
@@ -7,7 +7,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimaryDark">
 
         <TextView
             android:id="@+id/textView"
@@ -16,7 +17,7 @@
             android:padding="?android:listPreferredItemPaddingLeft"
             android:paddingLeft="45dp"
             android:text="Product"
-            android:textColor="#020202"
+            android:textColor="@color/colorAccent"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
