--- a/app/src/main/res/layout/edit_transaction_layout.xml
+++ b/app/src/main/res/layout/edit_transaction_layout.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimaryDark">
 
     <TextView
         android:id="@+id/edit_transaction_id"
@@ -55,7 +55,7 @@
         android:layout_width="414dp"
         android:layout_height="471dp"
         android:layout_marginBottom="244dp"
-        android:background="#ffffff"
+        android:background="@color/colorPrimaryDark"
         android:elevation="3dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -73,6 +73,9 @@
             android:autofillHints="price"
             android:hint="@string/enter_price"
             android:inputType="numberDecimal"
+            android:textColor="@color/textColor"
+            android:textColorHint="@color/textHint"
+            android:textColorLink="@color/colorAccent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.571"
@@ -92,6 +95,9 @@
             android:hint="@string/write_note"
             android:importantForAutofill="no"
             android:inputType="text"
+            android:textColor="@color/textColor"
+            android:textColorHint="@color/textHint"
+            android:textColorLink="@color/colorAccent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -119,6 +125,9 @@
             android:layout_marginBottom="266dp"
             android:autofillHints="Select Date"
             android:hint="@string/select_date"
+            android:textColor="@color/textColor"
+            android:textColorHint="@color/textHint"
+            android:textColorLink="@color/colorPrimary"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -135,7 +144,7 @@
             android:layout_marginBottom="410dp"
             android:elevation="2dp"
             android:text="@string/transaction_details"
-            android:textColor="#4c4c4c"
+            android:textColor="@color/transactionColor"
             android:textSize="28sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -152,7 +161,7 @@
             android:layout_marginBottom="108dp"
             android:elevation="2dp"
             android:text="@string/additional_data"
-            android:textColor="#4c4c4c"
+            android:textColor="@color/transactionColor"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -171,6 +180,9 @@
             android:elevation="1dp"
             android:hint="@string/select_category"
             android:onClick="onSelectCategory"
+            android:textColor="@color/textColor"
+            android:textColorHint="@color/textHint"
+            android:textColorLink="@color/colorAccent"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
