--- a/app/src/main/res/layout/expandable_recyclerview_category.xml
+++ b/app/src/main/res/layout/expandable_recyclerview_category.xml
@@ -12,7 +12,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimaryDark">
 
             <ImageView
                 android:id="@+id/imageView"
@@ -31,7 +32,7 @@
                 android:padding="?android:listPreferredItemPaddingLeft"
                 android:paddingLeft="45dp"
                 android:text="Company"
-                android:textColor="#0C0C0C"
+                android:textColor="@color/colorAccent"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
