--- a/app/src/main/res/layout/main_transaction_layout.xml
+++ b/app/src/main/res/layout/main_transaction_layout.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimaryDark"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
@@ -11,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:elevation="0dp"
+        app:cardBackgroundColor="@color/cardColorTrans"
         app:cardElevation="5dp"
         app:cardMaxElevation="0dp">
 
@@ -48,6 +50,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="28dp"
                 android:text="Total"
+                android:textColor="@color/textColor"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -75,20 +78,20 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="@android:color/white"
+        android:background="@color/colorPrimaryDark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="MissingConstraints">
 
     </androidx.viewpager.widget.ViewPager>
 
-<!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
-<!--        android:id="@+id/buttom_navigation"-->
-<!--        app:labelVisibilityMode="labeled"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:background="#FFFFFF"-->
-<!--        app:menu="@menu/menu" />-->
+    <!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
+    <!--        android:id="@+id/buttom_navigation"-->
+    <!--        app:labelVisibilityMode="labeled"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:background="#FFFFFF"-->
+    <!--        app:menu="@menu/menu" />-->
 
 
 </LinearLayout>
