--- a/app/src/main/res/layout/pie_data_layout.xml
+++ b/app/src/main/res/layout/pie_data_layout.xml
@@ -2,9 +2,9 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
-    android:background="#878787">
+    android:background="@color/backgroundTransaction"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,7 +15,7 @@
             android:id="@+id/piechart"
             android:layout_width="413dp"
             android:layout_height="394dp"
-            android:background="#EAEAEA"
+            android:background="@color/backgroundPie"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +26,7 @@
             android:id="@+id/linechart"
             android:layout_width="413dp"
             android:layout_height="394dp"
-            android:background="#EAEAEA"
+            android:background="@color/backgroundPie"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
