added test and updated charts
added 5 tests along with required depdendencies in build.gradle

fixed chart width issues

--- a/app/src/main/res/layout/pie_data_layout.xml
+++ b/app/src/main/res/layout/pie_data_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/piechartScrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/backgroundTransaction"
@@ -13,8 +14,8 @@
 
         <com.github.mikephil.charting.charts.PieChart
             android:id="@+id/piechart"
-            android:layout_width="413dp"
-            android:layout_height="394dp"
+            android:layout_width="match_parent"
+            android:layout_height="400dp"
             android:background="@color/backgroundPie"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -24,13 +25,14 @@
 
         <com.github.mikephil.charting.charts.BarChart
             android:id="@+id/linechart"
-            android:layout_width="413dp"
-            android:layout_height="394dp"
+            android:layout_width="match_parent"
+            android:layout_height="400dp"
             android:background="@color/backgroundPie"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="5dp"
             app:layout_constraintVertical_bias="0.81" />
     </LinearLayout>
 
