--- a/app/src/main/res/layout/fragment_transaction.xml
+++ b/app/src/main/res/layout/fragment_transaction.xml
@@ -18,11 +18,12 @@
             android:layout_height="match_parent">
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/month_report"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="84dp"
                 android:elevation="10dp"
+                android:onClick="showPieReport"
                 android:text="Report of the current month"
                 android:textAllCaps="false"
                 android:textSize="12sp"
